// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`sass-extract-js options plugin instance with options should NOT convert keys to camelCase 1`] = `
Object {
  "MY-VAR": "500px",
  "My-Cool_var": "400px",
  "my-var": "200px",
  "myVar": 0,
  "my__var--3": "700px",
  "my_other_vAr": "300px",
  "my_var": "200px",
  "my_var_2": "600px",
}
`;

exports[`sass-extract-js options plugin instance without options should NOT convert keys to camelCase 1`] = `
Object {
  "MY-VAR": "500px",
  "My-Cool_var": "400px",
  "my-var": "200px",
  "myVar": 0,
  "my__var--3": "700px",
  "my_other_vAr": "300px",
  "my_var": "200px",
  "my_var_2": "600px",
}
`;

exports[`sass-extract-js options plugin name should NOT convert keys to camelCase 1`] = `
Object {
  "MY-VAR": "500px",
  "My-Cool_var": "400px",
  "my-var": "200px",
  "myVar": 0,
  "my__var--3": "700px",
  "my_other_vAr": "300px",
  "my_var": "200px",
  "my_var_2": "600px",
}
`;

exports[`sass-extract-js should convert basic SASS vars 1`] = `
Object {
  "boolean": true,
  "builtinFunc": "rgb(255, 51, 51)",
  "calculated": 200,
  "customFunc": "rgb(255, 0, 0)",
  "hexColor": "rgb(240, 240, 240)",
  "importantStyle": "10px !important",
  "inline": 100,
  "mixedList": "1px solid rgb(0, 0, 0)",
  "mixinA": "mixin-variable",
  "mixinB": 456,
  "namedColor": "rgb(255, 0, 0)",
  "nestedGlobal": "100px",
  "null": null,
  "number": 100,
  "numberList": "0 10px 1em 10%",
  "numberWithUnit": "100px",
  "quotedString": "quoted",
  "rgbColor": "rgb(255, 255, 255)",
  "rgbaColor": "rgba(255, 255, 255, 0.5)",
  "stringList": "'Helvetica', 'Arial', sans-serif",
  "unquotedString": "string",
  "valueMap": Object {
    "keyOne": "2em",
    "keyThree": false,
    "keyTwo": "key",
  },
}
`;

exports[`sass-extract-js should convert keys to camelCase 1`] = `
Object {
  "myCoolVar": "400px",
  "myOtherVAr": "300px",
  "myVar": "500px",
  "myVar2": "600px",
  "myVar3": "700px",
}
`;

exports[`sass-extract-js should handle file with no variables 1`] = `Object {}`;

exports[`sass-extract-js should handle imports 1`] = `
Object {
  "importedVar": true,
  "myVar": "100px",
}
`;

exports[`sass-extract-js should pass sass options through 1`] = `
Object {
  "myVar": "100px",
  "nestedVar": false,
}
`;
